# pm-os

./: .gitignore  CLAUDE.md  Makefile  README.md  practice_bank_gap_fillers.md  pyproject.toml
backend/src/: calibration.py  db.py  evaluator.py  main.py  models.py  schema.sql  seed.py
backend/src/routes/: attempts.py  cases.py  evaluate.py  progress.py
backend/tests/: test_attempts.py  test_calibration.py  test_cases.py  test_evaluate.py  test_evaluator.py  test_schema.py  test_seed_and_cors.py
docs/: ddd-vocab.md  evaluation.md  iteration-plan-v2.md
frontend/: package-lock.json  package.json
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/api/: client.test.ts
frontend/tests/data/: calibration.test.ts  case-studies.test.ts  skills.test.ts
spec/outputs/: PM-OS_Iteration_0_Spec.md
work-log/2026-03-12/: iteration-01.md
work-log/2026-03-23/: iteration-01.md
work-log/2026-03-24/: iteration-02.md  iteration-03.md  iteration-04.md
work-log/2026-03-25/: iteration-05.md  iteration-06.md  iteration-07.md
work-log/2026-03-26/: iteration-008.md  iteration-009.md  iteration-010.md  iteration-011.md  iteration-012.md  iteration-013.md  iteration-014.md  iteration-015.md  retro-001-iterations-001-015.md
work-log/2026-03-30/: iteration-016.md  iteration-017.md  iteration-018.md  iteration-019.md  iteration-020.md  iteration-021.md  iteration-022.md  iteration-023.md  iteration-024.md  iteration-025.md  iteration-026.md  iteration-027.md  iteration-028.md  iteration-029.md  iteration-030.md  iteration-031.md  iteration-032.md  iteration-033.md
(+18 files in other folders)
